- Fixing authors page alignment issues - Removing banner image in authors page

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -611,3 +611,8 @@ a {
 	    font-size: 8px;
 	}
 }
+
+.article-author-container
+{
+	padding-top: 50px;
+}
